--- a/src/test/resources/com/googlecode/lighthttp/defaultheaders.properties
+++ b/src/test/resources/com/googlecode/lighthttp/defaultheaders.properties
@@ -21,7 +21,7 @@
 #
 
 #Web Browser Default Headers
-User-Agent=Mozilla/5.0 (Windows; U; Windows NT 5.1; ru; rv:1.8.1.12) Gecko/20080201 Firefox/2.0.0.12
+User-Agent=lighthttp/0.1
 Accept=text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
 Accept-Language=ru,en-us;q=0.7,en;q=0.3
 Accept-Encoding=gzip,deflate
