Added headers check in test

--- a/src/test/resources/com/googlecode/lighthttp/defaultheaders.properties
+++ b/src/test/resources/com/googlecode/lighthttp/defaultheaders.properties
@@ -21,10 +21,10 @@
 #
 
 #Web Browser Default Headers
-User-Agent=lighthttp/0.1
+User-agent=lighthttp/0.1
 Accept=text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
-Accept-Language=ru,en-us;q=0.7,en;q=0.3
-Accept-Encoding=gzip,deflate
-Accept-Charset=windows-1251,utf-8;q=0.7,*;q=0.7
-Keep-Alive=300
+Accept-language=ru,en-us;q=0.7,en;q=0.3
+Accept-encoding=gzip,deflate
+Accept-charset=windows-1251,utf-8;q=0.7,*;q=0.7
+Keep-alive=300
 Connection=keep-alive
