Added ability to send multipart requests

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.1.1</version>
         </dependency>
+        <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpmime</artifactId>
+          <version>4.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
