--- a/src/test/resources/com/googlecode/anhttp/defaultheaders.properties
+++ b/src/test/resources/com/googlecode/anhttp/defaultheaders.properties
@@ -20,17 +20,11 @@
 # SOFTWARE.
 #
 
-### direct log messages to stdout ###
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.Encoding=windows-1251
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %-5p [%c{1}] %m%n
-
-### set log levels - for more verbose logging change 'info' to 'debug' ###
-#Default log levels
-log4j.logger.org.apache.http.wire=info, stdout
-log4j.logger.org.apache.http.headers=info, stdout
-log4j.logger.org.apache.http.client=info, stdout
-log4j.logger.org.apache.http.impl=info, stdout
-log4j.logger.com.googlecode.anhttp=debug, stdout
+#Web Browser Default Headers
+User-agent=anhttp/0.2
+Accept=text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
+Accept-language=ru,en-us;q=0.7,en;q=0.3
+Accept-encoding=gzip,deflate
+Accept-charset=windows-1251,utf-8;q=0.7,*;q=0.7
+Keep-alive=300
+Connection=keep-alive
