--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.googlecode.anhttp</groupId>
+    <groupId>anhttp</groupId>
     <artifactId>anhttp</artifactId>
     <packaging>jar</packaging>
     <version>0.2</version>
