--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
     <groupId>anhttp</groupId>
     <artifactId>anhttp</artifactId>
     <packaging>jar</packaging>
-    <version>0.2</version>
-    <name>Lightweight wrapper on top of apache httpclient</name>
+    <version>0.3-SNAPSHOT</version>
+    <name>Another HTTP: a lightweight wrapper on top of apache httpclient</name>
 
     <properties>
         <java.version>1.5</java.version>
