Updated log4j properties

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -33,4 +33,4 @@ log4j.logger.org.apache.http.wire=info, stdout
 log4j.logger.org.apache.http.headers=info, stdout
 log4j.logger.org.apache.http.client=info, stdout
 log4j.logger.org.apache.http.impl=info, stdout
-log4j.logger.com.googlecode.anhttp=debug, stdout
+log4j.logger.anhttp=debug, stdout
