--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,22 @@
     <groupId>anhttp</groupId>
     <artifactId>anhttp</artifactId>
     <packaging>jar</packaging>
-    <version>0.3</version>
+    <version>0.3.1-SNAPSHOT</version>
     <name>Another HTTP: a lightweight wrapper on top of apache httpclient</name>
+
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>https://raw.github.com/sprilukin/anhttp/master/LICENSE</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Sergey Prilukin</name>
+            <email>sprilukin@gmail.com</email>
+        </developer>
+    </developers>
 
     <properties>
         <java.version>1.5</java.version>
@@ -45,6 +59,10 @@
             <url>https://raw.github.com/sprilukin/mvn-repo/master/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <scm>
+        <connection>scm:git:git@github.com:sprilukin/anhttp.git</connection>
+    </scm>
 
     <dependencies>
         <!-- Libs for test purposes -->
@@ -108,6 +126,7 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
                         <compilerVersion>${java.version}</compilerVersion>
@@ -121,8 +140,9 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.4.3</version>
+                    <version>2.10</version>
                     <configuration>
                         <skip>false</skip>
                         <systemProperties>
@@ -137,6 +157,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.7</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.2.1</version>
+                    <configuration>
+                        <preparationGoals>clean install</preparationGoals>
+                        <goals>deploy</goals>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
