--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,7 @@
     </distributionManagement>
 
     <scm>
-        <!--<connection>scm:git:git@github.com:sprilukin/anhttp.git</connection>-->
-        <connection>scm:git:git://github.com/sprilukin/anhttp.git</connection>
+        <developerConnection>scm:git:[fetch=]git://github.com/sprilukin/anhttp.git[push=]git@github.com:sprilukin/anhttp.git</developerConnection>
     </scm>
 
     <dependencies>
