--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <version>0.3.1</version>
     <name>Another HTTP</name>
     <description>A lightweight wrapper on top of apache httpclient</description>
+    <url>https://github.com/sprilukin/anhttp</url>
 
     <licenses>
         <license>
@@ -61,10 +62,6 @@
         </snapshotRepository>
     </distributionManagement>
 
-    <scm>
-        <developerConnection>scm:git:[fetch=]git://github.com/sprilukin/anhttp.git[push=]git@github.com:sprilukin/anhttp.git</developerConnection>
-    </scm>
-
     <repositories>
         <repository>
             <id>sprilukin-releases</id>
@@ -83,25 +80,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.15</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.jms</groupId>
-                    <artifactId>jms</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun.jdmk</groupId>
-                    <artifactId>jmxtools</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun.jmx</groupId>
-                    <artifactId>jmxri</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.mail</groupId>
-                    <artifactId>mail</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>1.2.16</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -113,7 +92,7 @@
         <dependency>
             <groupId>anhttpserver</groupId>
             <artifactId>anhttpserver</artifactId>
-            <version>0.1</version>
+            <version>0.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -171,16 +150,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.7</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>2.2.1</version>
-                    <configuration>
-                        <preparationGoals>clean install</preparationGoals>
-                        <goals>deploy</goals>
-                        <autoVersionSubmodules>true</autoVersionSubmodules>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
