--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -34,4 +34,4 @@ log4j.logger.org.apache.http.headers=info, stdout
 log4j.logger.org.apache.http.client=info, stdout
 log4j.logger.org.apache.http.impl=info, stdout
 log4j.logger.anhttpserver=info, stdout
-log4j.logger.anhttp=debug, stdout
+log4j.logger.anhttpclient=debug, stdout
