--- a/src/test/resources/anhttpclient/defaultheaders.properties
+++ b/src/test/resources/anhttpclient/defaultheaders.properties
@@ -21,7 +21,7 @@
 #
 
 #Web Browser Default Headers
-User-agent=anhttp/0.2
+User-agent=anhttpclient/0.2
 Accept=text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
 Accept-language=ru,en-us;q=0.7,en;q=0.3
 Accept-encoding=gzip,deflate
